--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
