--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
+    "node-cron": "^3.0.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
