vercel json changes

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/index.js"
+        "dest": "index.js"
       }
+    ],
+    "rewrites": [
+        { 
+            "source": "/api/(.*)", 
+            "destination": "/api"
+        }
     ]
   }
